style: :lipstick: fix contrast color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,8 +21,8 @@
   --font-headers: 'Fira Sans', sans-serif;
   --foreground-rgb: 255, 255, 255;
   --background-color:#1b2e3c;
-  --input-color:#000;
-  --color:#000 ;
+  --input-color:#fff;
+  --color:#fff ;
   --font-weight:400;
   --transition: 0.2s ease-in-out;
 }
