--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -76,6 +76,7 @@ button {
   border: 1px solid transparent;
   padding: 1rem;
   background-color: hsl(180deg, 85%, 36%);
+  color: var(--color);
   @include mobile() {
     width: 95vw;
   }
